# cuopt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  RELEASE-NOTES.md  build.sh  dependencies.yaml  gemini-extension.json
.claude-plugin/: marketplace.json
python/cuopt/cuopt/: CMakeLists.txt  __init__.py
python/cuopt/cuopt/grpc/: CMakeLists.txt  __init__.py
python/cuopt/cuopt/grpc/linear_programming/: CMakeLists.txt  __init__.py  grpc_client.pxd  grpc_client.pyx
python/cuopt/cuopt/linear_programming/: CMakeLists.txt  __init__.py  problem.py  pyproject.toml
python/cuopt/cuopt/linear_programming/data_model/: data_model_wrapper.pyx
python/cuopt/cuopt/linear_programming/io/: CMakeLists.txt  __init__.py  parser.pxd  parser.py  parser_wrapper.pyx
python/cuopt/cuopt/linear_programming/io/utilities/: __init__.py  exception_handler.py
python/cuopt/cuopt/linear_programming/solver/: solver.pxd  solver.py  solver_parameters.py  solver_wrapper.pxd  solver_wrapper.pyx
python/cuopt/cuopt/linear_programming/solver_settings/: CMakeLists.txt  __init__.py  solver_settings.pxd  solver_settings.pyx
python/cuopt/cuopt/routing/structure/: routing_utilities.pxd
python/cuopt/cuopt/tests/: conftest.py
python/cuopt/cuopt/tests/fixtures/: grpc_server_fixtures.py
python/cuopt/cuopt/tests/linear_programming/: test_cpu_only_execution.py  test_grpc_client.py  test_incumbent_callbacks.py  test_lp_solver.py  test_parser.py  test_python_API.py
python/cuopt/cuopt/tests/socp/: test_socp.py
python/cuopt/cuopt/utilities/: __init__.py  utils.py
(+384 files in other folders)
